# bspline_opt

./: CMakeLists.txt  README.md  package.xml
include/bspline_opt/: bspline_optimizer_ego.h  bspline_optimizer_fast.h  bspline_optimizer_pe.hpp  lbfgs_ego.hpp  lbfgs_pe.hpp  non_uniform_bspline.h  uniform_bspline.h
src/: bspline_optimizer_ego.cpp  bspline_optimizer_fast.cpp  bspline_optimizer_pe.cpp  non_uniform_bspline.cpp  uniform_bspline.cpp
