<?xml version="1.0"?>
<package format="2">
  <name>bspline_opt</name>
  <version>1.2.0</version>
  <description>
    The bspline_opt package
  </description>
  <author email="bzhouai@todo.todo">bzhouai</author>
  <maintainer email="hyx020222@gmail.com">Eason Hua</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>plan_env</depend>
  <depend>path_searching</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
