<?xml version="1.0"?>
<package format="2">
  <name>bspline_opt</name>
  <version>1.3.0</version>
  <description>
    The bspline_opt package
  </description>

  <author email="bzhouai@todo.todo">bzhouai</author>
  <maintainer email="12010508@mail.sustech.edu.cn">Eason Hua</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>plan_env</depend>
  <depend>path_searching</depend>

  <export>
  </export>
</package>
